updated headlines, added box background, and fixed an issue on mobile with the tour date schedule

--- a/less/pages/home.less
+++ b/less/pages/home.less
@@ -181,7 +181,7 @@
   font-size: ~'calc(4vw + 3px)';
   margin: 0 auto;
   max-width: 60rem;
-  min-width: 30rem;
+
 
   @media screen and (min-width: @large-phone) {
     font-size: 3rem;
